[gd_scene load_steps=2 format=3 uid="uid://bly6vkba8tnef"]

[ext_resource type="Script" path="res://Scripts/PipeSpawner.gd" id="1_da7b8"]

[node name="PipeSpawner" type="Node2D"]
script = ExtResource("1_da7b8")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Timer_time_change" type="Timer" parent="."]
wait_time = 4.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer_time_change" to="." method="_on_timer_time_change_timeout"]
